compiler/testData/diagnostics/tests/typeParameters/deprecatedSyntax.kt
fun foo<!DEPRECATED_TYPE_PARAMETER_SYNTAX!><T><!>() {
    fun bar<!DEPRECATED_TYPE_PARAMETER_SYNTAX!><T><!>() {}
}